# LangChain-Learnerthon

./: .gitignore  README.md  pyproject.toml
week1/: 01-OpenAI-LLM.ipynb  02-LCEL.ipynb  03-LCEL-Advanced.ipynb  04-Runnable.ipynb
