[project]
name = "langchain-learnerthon"
version = "0.1.0"
description = ""
authors = [
    {name = "code.juo",email = "code.juno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-core (>=0.3.40,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "langchain-anthropic (>=0.3.8,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "langgraph (>=0.3.1,<0.4.0)",
    "langsmith (>=0.3.11,<0.4.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.3.2,<8.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
